Creating player finished, added locations and the default pictures.

--- a/MMORPGDiscordBot/MMORPGDiscordBot.csproj
+++ b/MMORPGDiscordBot/MMORPGDiscordBot.csproj
@@ -63,6 +63,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Location.cs" />
     <Compile Include="MMORPGDiscordBot.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
@@ -85,7 +88,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Images\" />
     <Folder Include="Player\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="DefaultPlayer.png" />
+    <EmbeddedResource Include="forest.png" />
+    <Content Include="mine.png" />
+    <EmbeddedResource Include="town.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
