Added inventory helper functions

--- a/MMORPGDiscordBot/MMORPGDiscordBot.csproj
+++ b/MMORPGDiscordBot/MMORPGDiscordBot.csproj
@@ -77,6 +77,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="MMORPGDiscordBot.cs" />
     <Compile Include="Player.cs" />
