--- a/MMORPGDiscordBot/MMORPGDiscordBot.csproj
+++ b/MMORPGDiscordBot/MMORPGDiscordBot.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stats.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
