--- a/MMORPGDiscordBot/MMORPGDiscordBot.csproj
+++ b/MMORPGDiscordBot/MMORPGDiscordBot.csproj
@@ -77,6 +77,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Location.cs" />
@@ -98,6 +99,10 @@
     <EmbeddedResource Include="forest.png" />
     <EmbeddedResource Include="mine.png" />
     <EmbeddedResource Include="town.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\codecracker.CSharp.1.0.0\analyzers\dotnet\cs\CodeCracker.Common.dll" />
+    <Analyzer Include="..\packages\codecracker.CSharp.1.0.0\analyzers\dotnet\cs\CodeCracker.CSharp.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
